--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
+    <script src="https://kit.fontawesome.com/8cd73803af.js" crossorigin="anonymous"></script>
     <title>Разработка веб-приложений</title>
 </head>
 <body>
     <div class="header">
-        <input type="text" placeholder="Search..">
+        <div class="search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input type="text" placeholder="Search...">
+        </div>
         <a class="left" href="#home">Home</a>
         <a class="left" href="#about">About</a>
         <a href="#contact">Contact</a>
@@ -82,6 +86,6 @@
           </div>
       </div>
       
-      <script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
