--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://kit.fontawesome.com/8cd73803af.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://js.arcgis.com/4.22/esri/themes/light/main.css">
+    <script src="https://js.arcgis.com/4.22/"></script>
+
     <title>Разработка веб-приложений</title>
 </head>
 <body>
@@ -38,6 +41,8 @@
         <input id="dp" name="dp">
       </div>
     </div>
+    
+    <div id="viewDiv"></div>
 
     <div class="slideshow-container">
         <div class="mySlides fade">
